<resources>
    <string name="app_name">HaiLT TC04333</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_top_rated">Top rated</string>
    <string name="title_popular">Popular</string>
    <string name="title_now_playing">Now playing</string>
    <string name="title_now_detail">Detail</string>
</resources>